feat : create jokes generator add : add image on main style : -import font Open Sans from googlefonts         -change background color body to rgb(127, 85, 177)         -style wrapper and the content inside it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <main>
+        <img src="emoji.png" alt="emojo laugh" width="100px" height="100px" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+          iste.
+        </p>
+        <button>Get Jokes</button>
+      </main>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
